refactor(html): html - validado

--- a/atividade 1/projetos.html
+++ b/atividade 1/projetos.html
@@ -95,6 +95,7 @@
         <h2>Contato</h2>
         <!-- Informações de contato -->
         <p>Email: contato@transforma.org.br</p>
+        </section>
     </footer>
 
     <!-- Importa o arquivo JavaScript da página de Projetos -->
