--- a/atividade 2/doações.html
+++ b/atividade 2/doações.html
@@ -16,7 +16,7 @@
 
     <!-- Importa o arquivo CSS externo para estilização -->
     <link rel="stylesheet" href="css/doacao.css">
-        <link rel="stylesheet" href="css/responsividade.css">
+    <link rel="stylesheet" href="css/responsividade.css">
 </head>
 <body>
     <header>
@@ -91,6 +91,7 @@
         <h2>Contato</h2>
         <!-- Informações de contato -->
         <p>Email: contato@transforma.org.br</p>
+        </section>
     </footer>
 
     <!-- Link para o arquivo JavaScript que contém a lógica do formulário -->
