--- a/atividade 2/index.html
+++ b/atividade 2/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Transforma+</title>
 
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/index.css" />
-        <link rel="stylesheet" href="css/responsividade.css">
+      href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/responsividade.css"/>
+    <style>
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 20px 0;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -49,8 +54,7 @@
         <img
           src="assets/pexels-max-fischer-5212700.jpg"
           alt=""
-          loading="lazy"
-        />
+          loading="lazy"/>
         <h1>Conectando pessoas, <br> transformando realidades</h1>
 
         <div class="botoes">
@@ -78,8 +82,7 @@
           <img
             src="assets/pexels-ladiwaynegrafix-18449721.jpg"
             alt=""
-            loading="lazy"
-          />
+            loading="lazy"/>
         </div>
 
         <section id="missao-valores-visao">
@@ -126,7 +129,7 @@
             fortalecem habilidades essenciais para a vida e o mercado de
             trabalho.
           </p>
-          <img src="assets/aula.jpg" alt="" loading="lazy" />
+          <img src="assets/aula.jpg" alt="" loading="lazy"/>
         </div>
       </section>
 
@@ -137,7 +140,7 @@
             Apoiamos jovens e adultos que buscam desenvolvimento pessoal e
             profissional, oferecendo recursos para transformar suas histórias.
           </p>
-          <img src="assets/nosso publico.jpg" alt="" loading="lazy" />
+          <img src="assets/nosso publico.jpg" alt="" loading="lazy"/>
         </div>
 
         <div class="impacto">
@@ -146,7 +149,7 @@
             Capacitar centenas de pessoas anualmente, promovendo aprendizado
             real e oportunidades concretas para quem precisa.
           </p>
-          <img src="assets/imapcto.jpg" alt="" loading="lazy" />
+          <img src="assets/imapcto.jpg" alt="" loading="lazy"/>
         </div>
       </section>
     </main>
