--- a/atividade 2/projetos.html
+++ b/atividade 2/projetos.html
@@ -10,7 +10,15 @@
 
     <!-- Importa o arquivo CSS externo para estilização -->
     <link rel="stylesheet" href="css/projetos.css">
-        <link rel="stylesheet" href="css/responsividade.css">
+    <link rel="stylesheet" href="css/responsividade.css">
+    <style>
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 20px 0;
+      }
+      </style>
 </head>
 <body>
     <!-- Cabeçalho e navegação principal -->
@@ -87,6 +95,7 @@
         <h2>Contato</h2>
         <!-- Informações de contato -->
         <p>Email: contato@transforma.org.br</p>
+        </section>
     </footer>
 
     <!-- Importa o arquivo JavaScript da página de Projetos -->
