--- a/atividade 3/voluntario.html
+++ b/atividade 3/voluntario.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Voluntário</title>
-    <link rel="stylesheet" href="css/formulario.css" />
+    <link rel="stylesheet" href="css/formulario.css"/>
     <link rel="stylesheet" href="css/responsividade.css">
     <!-- Importa ícones do Google Material Icons -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   </head>
   <body>
    <header>
@@ -51,7 +48,7 @@
 
         <!-- Campo de nome do voluntário -->
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required />
+        <input type="text" id="nome" name="nome" required/>
 
         <!--Campo de CPF do voluntario-->
         <label for="cpf">CPF</label>
@@ -80,12 +77,11 @@
           type="date"
           id="DataDeNascimento"
           name="DataDeNascimento"
-          required
-        />
+          required/>
 
          <!-- Campo de endereço do voluntário -->
         <label for="endereco">Endereço</label>
-        <input type="text" id="endereco" name="endereco" required />
+        <input type="text" id="endereco" name="endereco" required/>
 
          <!-- Campo de CEP do voluntário -->
         <label for="cep">CEP:</label>
@@ -95,11 +91,10 @@
           name="cep"
           required
           maxlength="9"
-          placeholder="00000-000"
-        />
+          placeholder="00000-000"/>
 
         <label for="cidade">Cidade:</label>
-        <input type="text" id="cidade" name="cidade" required />
+        <input type="text" id="cidade" name="cidade" required/>
 
          <!-- Campo Cidade do voluntário -->
         <label for="estado">Estado</label>
@@ -136,15 +131,15 @@
 
         <!-- Campo de e-mail do voluntário -->
         <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" required />
+        <input type="email" id="email" name="email" required/>
 
         <!-- Campo de senha -->
         <label for="senha">Senha</label>
-        <input type="password" id="senha" name="senha" required />
+        <input type="password" id="senha" name="senha" required/>
 
         <!-- Campo para confirmar a senha -->
         <label for="confirmSenha">Confirmar Senha</label>
-        <input type="password" id="confirmSenha" name="confirmSenha" required />
+        <input type="password" id="confirmSenha" name="confirmSenha" required/>
 
         <!-- Botão de envio do formulário -->
         <button type="submit">Quero me tornar um voluntário</button>
@@ -159,6 +154,7 @@
         <h2>Contato</h2>
         <!-- Informações de contato -->
         <p>Email: contato@transforma.org.br</p>
+        </section>
     </footer>
 
     <!-- Importa o arquivo JavaScript específico da página de voluntário -->
