--- a/doações.html
+++ b/doações.html
@@ -91,6 +91,7 @@
         <h2>Contato</h2>
         <!-- Informações de contato -->
         <p>Email: contato@transforma.org.br</p>
+        </section>
     </footer>
 
     <!-- Link para o arquivo JavaScript que contém a lógica do formulário -->
