--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Transforma+</title>
 
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/responsividade.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/responsividade.css"/>
   </head>
   <body>
     <header>
@@ -43,23 +40,17 @@
         </ul>
       </nav>
     </header>
-
     <main>
       <section id="banner">
         <img
-          src="assets/pexels-max-fischer-5212700.jpg"
-          alt=""
-          loading="lazy"
-        />
+          src="assets/pexels-max-fischer-5212700.jpg" alt="" loading="lazy"/>
         <h1>Conectando pessoas, <br> transformando realidades</h1>
 
         <div class="botoes">
           <a href="voluntario.html"
-            ><button><strong>SEJA VOLUNTÁRIO</strong></button></a
-          >
+            ><button><strong>SEJA VOLUNTÁRIO</strong></button></a>
           <a href="doações.html"
-            ><button><strong>DOE AGORA</strong></button></a
-          >
+            ><button><strong>DOE AGORA</strong></button></a>
         </div>
       </section>
 
@@ -76,10 +67,7 @@
           </p>
 
           <img
-            src="assets/pexels-ladiwaynegrafix-18449721.jpg"
-            alt=""
-            loading="lazy"
-          />
+            src="assets/pexels-ladiwaynegrafix-18449721.jpg"alt="" loading="lazy"/>
         </div>
 
         <section id="missao-valores-visao">
@@ -126,7 +114,7 @@
             fortalecem habilidades essenciais para a vida e o mercado de
             trabalho.
           </p>
-          <img src="assets/aula.jpg" alt="" loading="lazy" />
+          <img src="assets/aula.jpg" alt="" loading="lazy"/>
         </div>
       </section>
 
@@ -137,7 +125,7 @@
             Apoiamos jovens e adultos que buscam desenvolvimento pessoal e
             profissional, oferecendo recursos para transformar suas histórias.
           </p>
-          <img src="assets/nosso publico.jpg" alt="" loading="lazy" />
+          <img src="assets/nosso_publico.jpg" alt="" loading="lazy"/>
         </div>
 
         <div class="impacto">
@@ -146,7 +134,7 @@
             Capacitar centenas de pessoas anualmente, promovendo aprendizado
             real e oportunidades concretas para quem precisa.
           </p>
-          <img src="assets/imapcto.jpg" alt="" loading="lazy" />
+          <img src="assets/imapcto.jpg" alt="" loading="lazy"/>
         </div>
       </section>
     </main>
